# FluentQQUickWindow

./: .qmlls.ini  CMakeLists.txt  Main.qml  README.md  customquickwindow.cpp  customquickwindow.h  main.cpp  rsc.qrc
